--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "commonjs",
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
+    "blockchain:setup": "npx hardhat run scripts/local-setup.js --network localhost",
+    "blockchain:deploy": "npx hardhat run scripts/deploy.js",
+    "blockchain:node": "npx hardhat node",
+    "blockchain:compile": "npx hardhat compile",
     "server:dev": "cd server && node server.js",
     "client:dev": "vite",
     "build": "vite build",
@@ -30,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.2",
     "@types/bcryptjs": "^2.4.4",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^1.4.8",
@@ -43,6 +48,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "hardhat": "^2.17.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
