Convert to Ganache, MetaMask, MongoDB with Full Functionality

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,8 +4,8 @@
 # Contract address (same as in server .env)
 VITE_CONTRACT_ADDRESS=
 
-# RPC URL for frontend blockchain connection
-VITE_RPC_URL=http://localhost:8545
+# RPC URL for frontend (Ganache)
+VITE_RPC_URL=http://127.0.0.1:7545
 
-# For production/testnet
-# VITE_RPC_URL=https://sepolia.infura.io/v3/YOUR_FREE_INFURA_KEY
+# API URL
+VITE_API_URL=http://localhost:5000/api
