Complete Blockchain Land Registration System

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "dev:setup": "npm run blockchain:deploy:ganache && npm run dev",
-    "blockchain:setup": "npx hardhat run scripts/ganache-setup.js --network ganache",
+    "dev:setup": "npm run db:seed && npm run blockchain:deploy:ganache && npm run dev",
     "blockchain:deploy": "npx hardhat run scripts/deploy.js",
     "blockchain:deploy:ganache": "npx hardhat run scripts/deploy.js --network ganache",
     "blockchain:compile": "npx hardhat compile",
@@ -14,8 +13,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "setup": "echo 'Setting up environment...' && npm install && node scripts/setup-env.js",
-    "db:seed": "node scripts/seed-admin.js"
+    "setup": "echo 'Setting up environment...' && npm install && node scripts/setup-env.js && npm run db:seed",
+    "db:seed": "node scripts/seed-admin.js",
+    "db:reset": "node scripts/reset-db.js"
   },
   "dependencies": {
     "axios": "^1.11.0",
