--- a/package.json
+++ b/package.json
@@ -20,19 +20,33 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "form-data": "^4.0.4",
+    "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "multer": "^1.4.4",
+    "nodemailer": "^6.9.7",
+    "otplib": "^12.0.1",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "sharp": "^0.32.6",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "speakeasy": "^2.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
